gcc/testsuite/gdc.test/compilable/emptystatement.d
/*
REQUIRED_ARGS:
TEST_OUTPUT:
---
---
*/

void foo()
{
    int x;;
    enum A
    {
        a,
        b,
        c
    };

    void bar() {};
}
